--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
-                      <li class="nav-item"><a class="nav-link" href="htmlpage.html">Home</a></li>
+                      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                       <li class="nav-item"><a class="nav-link" href="quiz.html">Quiz</a></li>                     
                       <li class="nav-item"><a class="nav-link" href="21.html">Play</a></li>                   
                     </ul>
@@ -58,8 +58,9 @@
 
     <!-- footer -->
 <footer>
-  <div class="footer">Follow us &nbsp;
+  <div class="footer">
   <p>Site brought to you by: Chana Preizler, Tehila Stein, Miri Kamenetsky, Chana Fine, and Esty Nass</p>
+      Follow us &nbsp;
     <a href="https://www.facebook.com/guardianlife" class="fa fa-facebook"></a>
     <a href="https://twitter.com/guardianlife" class="fa fa-twitter"></a>
     <a href="https://www.instagram.com/guardianlife" class="fa fa-instagram"></a>
