--- a/Gardian Wealth.html
+++ b/Gardian Wealth.html
@@ -3,24 +3,24 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="stylesheet" href="./Gardian Wealth_files/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
           <!-- Add icon library -->
-  <link rel="stylesheet" href="./Gardian Wealth_files/font-awesome.min.css">
-  <link href="./Gardian Wealth_files/css" rel="stylesheet">
+  <link rel="stylesheet" href="font-awesome.min.css">
+  <link href="css" rel="stylesheet">
 
         
         <title>Gardian Wealth</title>
 
            <!--stylesheet-->
-  <link rel="stylesheet" type="text/css" href="./Gardian Wealth_files/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 
     </head>
 
     <body>
         <header class="header">
             <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-                <a class="navbar-brand" href="https://www.guardianlife.com/"> <img src="./Gardian Wealth_files/guardian-logo.svg" class="img-fluid"></a>
+                <a class="navbar-brand" href="https://www.guardianlife.com/"> <img src="guardian-logo.svg" class="img-fluid"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
