--- a/quiz.html
+++ b/quiz.html
@@ -28,7 +28,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
-                      <li class="nav-item"><a class="nav-link" href="htmlpage.html">Home</a></li>
+                      <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                       <li class="nav-item"><a class="nav-link" href="quiz.html">Quiz</a></li>  
                       <li class="nav-item"><a class="nav-link" href="21.html">Play</a></li>                                        
                     </ul>
