--- a/index.html
+++ b/index.html
@@ -58,13 +58,12 @@
 
     <!-- footer -->
 <footer>
-  <div class="footer">
-  <p>Site brought to you by: Chana Preizler, Tehila Stein, Miri Kamenetsky, Chana Fine, and Esty Nass</p>
-      Follow us &nbsp;
+  <div class="footer" style="align-text: left">Follow us &nbsp;
     <a href="https://www.facebook.com/guardianlife" class="fa fa-facebook"></a>
     <a href="https://twitter.com/guardianlife" class="fa fa-twitter"></a>
     <a href="https://www.instagram.com/guardianlife" class="fa fa-instagram"></a>
     <a href="https://www.youtube.com/user/GLICofAmerica" class="fa fa-youtube"></a>
+      <p>Site brought to you by: Chana Preizler, Esty Nass, Tehila Stein, Chana Fine, and Miri Kamenetsky</p>
   </div>
 </footer>
 </html>
