--- a/21.html
+++ b/21.html
@@ -38,7 +38,7 @@
   </header>
 
 
-    <video autoplay muted loop id="myVideo">
+    <video autoplay loop id="myVideo">
     <source src="https://media.istockphoto.com/videos/one-hundred-usd-dollar-bills-falling-on-white-background-video-id509065348" type="video/mp4">
     </video>
 
